# SpaceGame

./: .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  SpaceGame.sln  TC-mingw.cmake  coins.py  graph  log.txt  main.c
assets/models/: rock_shard.mtl
assets/scripts/: load.lua  start.lua
assets/scripts/load/: actors.lua  blocks.lua  items.lua  materials.lua  recipes.lua  widgets.lua
assets/shaders/: bloom.comp  color_helper.hlsl  construction.frag  construction.vert  debug.vert  debug_push_constant.hlsl  dither.comp  lit.frag  lit.vert  lit_material_data.hlsl  particle.frag  particle.vert  push_constant.hlsl  scene_data.hlsl  shading.hlsl  shadow_maps.hlsl  shadow_test.frag  skybox.vert  terrain-debug.frag  terrain.frag  terrain.vert  test.comp  test.frag  test.vert  ui.vert  ui_push_constant.hlsl
assets/shaders/compiled/: construction_vert.spv  debug_frag.spv  lit_vert.spv  terrain_frag.spv  terrain_vert.spv  ui_frag.spv  ui_vert.spv
assets/shaders/old/: lit.frag  ui.frag
assets/textures/ui/: bnuy.aseprite
csharp/: Application.cs  app.csproj
include/: FastNoise.h  cista.h
include/glad/: glad.h
include/imgui/: imconfig.h
include/imgui/backends/: imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
include/imgui/backends/vulkan/: color_helper.hlsl  frag_out.txt  glsl_shader.frag
lib/: glfw3.lib
lib/macos/: libGameNetworkingSockets.dylib
lib/win/: GameNetworkingSockets.lib
src/: Microsoft.Cpp.Default.props  core.vcxproj  core.vcxproj''  main copy.cpp  main.cpp  main_opengl.cpp  test.cpp
src/actor/: actor-factory-fwd.hpp  actor-factory.hpp  actor-template.txt  actor.hpp  actors-all.hpp  character.hpp  construction.cpp  construction.hpp  item-actor.hpp  particle-system-actor.hpp  physics-actor.hpp  rigidbody-actor.hpp  terrain-chunk.hpp  terrain-structs.hpp  terrain.hpp
src/actor/components/: camera-shake.hpp  character-body-old.hpp  character-body.hpp  gravity-well.hpp  inventory.hpp  particle-effect.hpp  rigidbody.hpp
src/actor/terrain/: terrain-structs.hpp  terrain-vertex.hpp  voxel-data.hpp
src/api/: api-actor.hpp  api-all.hpp  api-block.hpp  api-character.hpp  api-construction.hpp  api-general.hpp  api-item.hpp  api-material.hpp  api-registry-actor.hpp  api-registry-block.hpp  api-registry-general.hpp  api-registry-item.hpp  api-registry-material.hpp  api-registry-particle-effect.hpp  api-registry-recipe.hpp  api-registry-widget.hpp  api-registry.hpp  api-texture.hpp  api-world.hpp
src/block/: block-facing.hpp  block-id.hpp  block-state.hpp  block.hpp  cockpit-block.hpp  connected-block.hpp  furnace-block.hpp  thruster-block.hpp
src/block/actor/: block-actor.hpp  furnace-block-actor.hpp
src/collision/: intersections.hpp
src/csharp/: Application.cs  csharp.csproj
src/engine/: debug.hpp  game-application copy.hpp  game-application.cpp  game-application.hpp  input.hpp  loader.hpp  registry.hpp  terrain-loader.hpp  test-app.hpp  vulkan.hpp  window.hpp  world.hpp
src/graphics/: camera.hpp  color.hpp  compute-shader.hpp  material.hpp  material_old.txt  mesh-data.hpp  mesh.hpp  model.hpp  shader.hpp  skybox.hpp  text.hpp  text.old.txt  texture.hpp  vulkan.cpp  vulkan.hpp
src/helper/: anim.hpp  block-helper.cpp  block-helper.hpp  block-storage.hpp  clock.hpp  collision-helper.hpp  event.hpp  file-helper.cpp  file-helper.hpp  generic-storage.hpp  jolt-helper.hpp  location-key.hpp  math-helper.hpp  model.hpp  observer.hpp  physics-helper.hpp  random-helper.hpp  random.hpp  rect.hpp  sprite.hpp  string-helper.hpp  terrain-helper.hpp
src/interface/: console.hpp  font.hpp  i-has-menu.hpp  interface.hpp  inventory-widget.hpp  item-slot-interact-options.hpp  item-slot-widget.hpp  menu-object.hpp  text-widget.hpp  toolbar-widget.hpp  widget.hpp  widgets-all.hpp
src/interface/actor/: actor-widget.hpp  inventory-widget.hpp  player-widget.hpp  toolbar-widget.hpp
src/interface/block/: block-menu-object.hpp  block-widget.hpp  furnace-widget.hpp
src/interface/debug/: cheats-menu.hpp  generation-menu.hpp
src/item/: drill-tool.hpp  item-stack.hpp  item.hpp  items-all.hpp  pickaxe-tool.hpp  place-block-tool.hpp  recipe.hpp  resource-item.hpp  tool-user.hpp  tool.hpp
src/networking/: game-client.hpp  game-server.hpp  message-sender.hpp  net-test-app.hpp  network-init.hpp
src/networking/message/: message-actor.hpp  message-character.hpp
src/persistance/: data-block.hpp  data-generic-storage.hpp  data-generic.hpp  data-loader-impl.hpp  data-loader.hpp  data-world.hpp  save-helper.hpp
src/persistance/actor/: data-actor.hpp  data-character.hpp  data-construction.hpp  data-terrain.hpp
src/persistance/actor/component/: data-inventory.hpp  data-rigidbody.hpp
src/persistance/block/: data-block-storage.hpp  data-block.hpp
src/persistance/item/: data-item-stack.hpp
src/physics/: intersections.hpp  jolt-conversions.hpp  jolt-layers.hpp  jolt-setup.hpp  jolt-terrain-shape.hpp  jolt-trace.hpp  jolt-userdata.hpp  physics-body.hpp  resolution.hpp  structs.hpp
src/safekeeping/: glad.c  main_opengl.cpp  physics-body_old.hpp  structs_old.hpp
src/shader/: shader.hpp
src/sol/: sol.hpp
